--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "dependencies": {
     "@discordjs/rest": "^2.4.0",
+    "@discordjs/voice": "^0.17.0",
     "axios": "^1.7.7",
     "discord-api-types": "^0.37.104",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "node-fetch": "^3.3.2",
     "openai": "^4.71.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "ytdl-core": "^4.11.5"
   },
   "name": "discordgpt",
   "version": "1.0.0",
