--- a/bot/package.json
+++ b/bot/package.json
@@ -6,6 +6,7 @@
     "discord-api-types": "^0.37.104",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.5",
+    "express": "^4.21.2",
     "google-tts-api": "^0.0.6",
     "node-fetch": "^3.3.2",
     "openai": "^4.71.1",
@@ -18,11 +19,15 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/bot.js",
-    "dev": "nodemon src/bot.js"
+    "start:bot": "node src/bot.js",
+    "start:api": "node src/api.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run start:bot\" \"npm run start:api\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "concurrently": "^9.1.2"
+  }
 }
