Start bot button working

--- a/bot/package.json
+++ b/bot/package.json
@@ -3,6 +3,7 @@
     "@discordjs/rest": "^2.4.2",
     "@discordjs/voice": "^0.18.0",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "discord-api-types": "^0.37.104",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.5",
